// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter table adding fulltext index with one column and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "fti_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext index with one column. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext index with one column. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext index with two columns and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "fti_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "ftk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column and options. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "ftk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column. 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with one column. 4`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with two columns and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "ftk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding fulltext key with two columns and options. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addFulltextIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "ftk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial index with one column and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "si_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial index with one column. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial index with one column. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial index with two columns and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "si_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "sk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column and options. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "sk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column. 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with one column. 4`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": null,
                      "options": [],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with two columns and options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "sk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter table adding spatial key with two columns and options. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "specs": [
              {
                "def": {
                  "spec": {
                    "def": {
                      "action": "addSpatialIndex",
                      "columns": [
                        {
                          "def": {
                            "column": "id",
                            "length": 2,
                            "sort": "asc",
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                        {
                          "def": {
                            "column": "o_id",
                            "length": undefined,
                            "sort": undefined,
                          },
                          "id": "P_INDEX_COLUMN",
                        },
                      ],
                      "name": "sk_id",
                      "options": [
                        {
                          "def": {
                            "keyBlockSize": 1024,
                          },
                          "id": "O_INDEX_OPTION",
                        },
                        {
                          "def": {
                            "comment": "test",
                          },
                          "id": "O_INDEX_OPTION",
                        },
                      ],
                    },
                    "id": "O_ALTER_TABLE_SPEC",
                  },
                },
                "id": "P_ALTER_TABLE_SPECS",
              },
            ],
            "table": "people",
          },
          "id": "P_ALTER_TABLE",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;
